--- a/public/index.html
+++ b/public/index.html
@@ -14,22 +14,33 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <script
       defer
       src="https://use.fontawesome.com/releases/v6.0.0/js/all.js"
     ></script>
-
     <title>Ashley Gyngell's Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <div id="root"></div>
+
+    <div class="social-links">
+      <a href="mailto:ashleygyngell@gmail.com"
+        ><i class="fa-solid fa-envelope"></i>
+      </a>
+      <a href="https://github.com/ashleygyngell" aria-label="GitHub">
+        <i class="fa-brands fa-github"></i>
+      </a>
+      <a href="https://www.linkedin.com/in/ashleygyngell/" aria-label="LinkedIn"
+        ><i class="fa-brands fa-linkedin"></i>
+      </a>
+    </div>
+    <div class="to-top hidden">
+      <a href="#">
+        <i class="fa-solid fa-chevron-up"></i>
+      </a>
+    </div>
   </body>
 </html>
