Overhaul with locomotive package installed - half complete layout

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Oxygen&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway
+&display=swap"
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -23,9 +24,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-
     <div id="root"></div>
-
     <div class="social-links">
       <a href="mailto:ashleygyngell@gmail.com"
         ><i class="fa-solid fa-envelope"></i>
@@ -38,7 +37,7 @@
       </a>
     </div>
     <div class="to-top hidden">
-      <a href="#">
+      <a href="#navbar" data-scroll-to>
         <i class="fa-solid fa-chevron-up"></i>
       </a>
     </div>
