layout for experience and interests sectionn

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+
     <link rel="icon" href="./ashley-gyngell-portfolio.ico" />
     <link
       rel="stylesheet"
@@ -20,25 +21,30 @@
       defer
       src="https://use.fontawesome.com/releases/v6.0.0/js/all.js"
     ></script>
+    <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
     <title>Ashley Gyngell's Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <div class="social-links">
-      <a href="mailto:ashleygyngell@gmail.com"
+      <a href="mailto:ashleygyngell@gmail.com" target="_blank" rel="noreferrer"
         ><i class="fa-solid fa-envelope"></i>
       </a>
-      <a href="https://github.com/ashleygyngell" aria-label="GitHub">
+      <a
+        href="https://github.com/ashleygyngell"
+        target="_blank"
+        rel="noreferrer"
+        aria-label="GitHub"
+      >
         <i class="fa-brands fa-github"></i>
       </a>
-      <a href="https://www.linkedin.com/in/ashleygyngell/" aria-label="LinkedIn"
+      <a
+        href="https://www.linkedin.com/in/ashleygyngell/"
+        target="_blank"
+        rel="noreferrer"
+        aria-label="LinkedIn"
         ><i class="fa-brands fa-linkedin"></i>
-      </a>
-    </div>
-    <div class="to-top hidden">
-      <a href="#navbar" data-scroll-to>
-        <i class="fa-solid fa-chevron-up"></i>
       </a>
     </div>
   </body>
